--- a/index.html
+++ b/index.html
@@ -45,8 +45,93 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Supabase y JS personalizado -->
+  <!-- Supabase JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/supabase.min.js"></script>
-  <script src="main.js"></script>
+
+  <!-- JS personalizado -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+
+      // Conexión a Supabase
+      const supabaseUrl = 'https://otdbuuhddyrjhmgzctsf.supabase.co'
+      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im90ZGJ1dWhkZHlyamhtZ3pjdHNmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MDMwNzUsImV4cCI6MjA3NjM3OTA3NX0.YXXSWbp5Q2GSM3kbEegzyMLCrAXt2dLtJlkdLDSQawE'
+
+      const supabase = supabase.createClient(supabaseUrl, supabaseKey)
+
+      // Elementos del DOM
+      const userForm = document.getElementById('userForm')
+      const usersTable = document.getElementById('usersTable')
+      const cancelEdit = document.getElementById('cancelEdit')
+
+      // Cargar usuarios
+      async function loadUsers() {
+        const { data, error } = await supabase.from('usuarios').select('*').order('id', { ascending: true })
+        if (error) return console.error(error)
+
+        usersTable.innerHTML = ''
+        data.forEach(user => {
+          const row = document.createElement('tr')
+          row.innerHTML = `
+            <td>${user.id}</td>
+            <td>${user.nombre}</td>
+            <td>${user.email}</td>
+            <td>
+              <button class="btn btn-sm btn-warning" onclick="editUser(${user.id}, '${user.nombre}', '${user.email}')">Editar</button>
+              <button class="btn btn-sm btn-danger" onclick="deleteUser(${user.id})">Eliminar</button>
+            </td>
+          `
+          usersTable.appendChild(row)
+        })
+      }
+
+      // Agregar / actualizar usuario
+      userForm.addEventListener('submit', async e => {
+        e.preventDefault()
+        const id = document.getElementById('userId').value
+        const nombre = document.getElementById('name').value
+        const email = document.getElementById('email').value
+
+        if (id) {
+          const { error } = await supabase.from('usuarios')
+            .update({ nombre, email })
+            .eq('id', id)
+          if (error) console.error(error)
+        } else {
+          const { error } = await supabase.from('usuarios')
+            .insert([{ nombre, email }])
+          if (error) console.error(error)
+        }
+
+        userForm.reset()
+        document.getElementById('userId').value = ''
+        loadUsers()
+      })
+
+      // Editar usuario
+      window.editUser = (id, nombre, email) => {
+        document.getElementById('userId').value = id
+        document.getElementById('name').value = nombre
+        document.getElementById('email').value = email
+      }
+
+      // Cancelar edición
+      cancelEdit.addEventListener('click', () => {
+        userForm.reset()
+        document.getElementById('userId').value = ''
+      })
+
+      // Eliminar usuario
+      window.deleteUser = async (id) => {
+        if (confirm('¿Eliminar este usuario?')) {
+          const { error } = await supabase.from('usuarios').delete().eq('id', id)
+          if (error) console.error(error)
+          loadUsers()
+        }
+      }
+
+      // Cargar usuarios al inicio
+      loadUsers()
+    })
+  </script>
 </body>
 </html>
