--- a/index.html
+++ b/index.html
@@ -3,133 +3,132 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRUD Usuarios - Supabase</title>
+  <title>CRUD Supabase</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Supabase JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.33.1/dist/supabase.min.js"></script>
 </head>
-<body class="p-4">
+<body class="bg-light">
 
-  <div class="container">
-    <h1 class="mb-4">Usuarios</h1>
+<div class="container py-5">
+  <h1 class="mb-4">CRUD Usuarios</h1>
 
-    <!-- Formulario para agregar/editar -->
-    <form id="userForm" class="mb-4">
-      <input type="hidden" id="userId">
-      <div class="mb-3">
-        <label for="name" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="name" required>
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Guardar</button>
-      <button type="button" class="btn btn-secondary" id="cancelEdit">Cancelar</button>
-    </form>
-
-    <!-- Tabla de usuarios -->
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Nombre</th>
-          <th>Email</th>
-          <th>Acciones</th>
-        </tr>
-      </thead>
-      <tbody id="usersTable">
-        <!-- Filas generadas dinámicamente -->
-      </tbody>
-    </table>
+  <!-- Formulario -->
+  <div class="card mb-4">
+    <div class="card-body">
+      <form id="userForm">
+        <input type="hidden" id="userId">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" id="nombre" class="form-control" required>
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" id="email" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="button" id="cancelEdit" class="btn btn-secondary d-none">Cancelar</button>
+      </form>
+    </div>
   </div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Supabase JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/supabase.min.js"></script>
+  <!-- Tabla -->
+  <table class="table table-bordered bg-white">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Email</th>
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody id="usersTable">
+      <!-- Aquí se cargan los usuarios -->
+    </tbody>
+  </table>
+</div>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
+<script>
+  // 1️⃣ Configurar Supabase
+  const supabaseUrl = 'https://otdbuuhddyrjhmgzctsf.supabase.co';
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im90ZGJ1dWhkZHlyamhtZ3pjdHNmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MDMwNzUsImV4cCI6MjA3NjM3OTA3NX0.YXXSWbp5Q2GSM3kbEegzyMLCrAXt2dLtJlkdLDSQawE';
+  const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-      // Conexión a Supabase
-      const supabaseUrl = 'https://otdbuuhddyrjhmgzctsf.supabase.co';
-      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im90ZGJ1dWhkZHlyamhtZ3pjdHNmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MDMwNzUsImV4cCI6MjA3NjM3OTA3NX0.YXXSWbp5Q2GSM3kbEegzyMLCrAXt2dLtJlkdLDSQawE';
-      const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+  const userForm = document.getElementById('userForm');
+  const usersTable = document.getElementById('usersTable');
+  const userIdInput = document.getElementById('userId');
+  const nombreInput = document.getElementById('nombre');
+  const emailInput = document.getElementById('email');
+  const cancelEditBtn = document.getElementById('cancelEdit');
 
-      // Elementos del DOM
-      const userForm = document.getElementById('userForm');
-      const usersTable = document.getElementById('usersTable');
-      const cancelEdit = document.getElementById('cancelEdit');
+  // 2️⃣ Función para listar usuarios
+  async function listarUsuarios() {
+    const { data, error } = await supabase.from('usuarios').select('*').order('id');
+    if (error) return console.error(error);
 
-      // Función para cargar usuarios
-      async function loadUsers() {
-        const { data, error } = await supabase.from('usuarios').select('*').order('id', { ascending: true });
-        if (error) return console.error(error);
+    usersTable.innerHTML = data.map(u => `
+      <tr>
+        <td>${u.id}</td>
+        <td>${u.nombre}</td>
+        <td>${u.email}</td>
+        <td>
+          <button class="btn btn-sm btn-warning" onclick="editarUsuario(${u.id}, '${u.nombre}', '${u.email}')">Editar</button>
+          <button class="btn btn-sm btn-danger" onclick="eliminarUsuario(${u.id})">Eliminar</button>
+        </td>
+      </tr>
+    `).join('');
+  }
 
-        usersTable.innerHTML = '';
-        data.forEach(user => {
-          const row = document.createElement('tr');
-          row.innerHTML = `
-            <td>${user.id}</td>
-            <td>${user.nombre}</td>
-            <td>${user.email}</td>
-            <td>
-              <button class="btn btn-sm btn-warning" onclick="editUser(${user.id}, '${user.nombre}', '${user.email}')">Editar</button>
-              <button class="btn btn-sm btn-danger" onclick="deleteUser(${user.id})">Eliminar</button>
-            </td>
-          `;
-          usersTable.appendChild(row);
-        });
-      }
+  // 3️⃣ Crear o actualizar usuario
+  userForm.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const nombre = nombreInput.value;
+    const email = emailInput.value;
+    const id = userIdInput.value;
 
-      // Agregar o actualizar usuario
-      userForm.addEventListener('submit', async e => {
-        e.preventDefault();
-        const id = document.getElementById('userId').value;
-        const nombre = document.getElementById('name').value;
-        const email = document.getElementById('email').value;
+    if (id) {
+      // Actualizar
+      const { error } = await supabase.from('usuarios').update({ nombre, email }).eq('id', id);
+      if (error) return console.error(error);
+    } else {
+      // Crear
+      const { error } = await supabase.from('usuarios').insert([{ nombre, email }]);
+      if (error) return console.error(error);
+    }
 
-        if (id) {
-          const { error } = await supabase.from('usuarios')
-            .update({ nombre, email })
-            .eq('id', id);
-          if (error) console.error(error);
-        } else {
-          const { error } = await supabase.from('usuarios')
-            .insert([{ nombre, email }]);
-          if (error) console.error(error);
-        }
+    userForm.reset();
+    userIdInput.value = '';
+    cancelEditBtn.classList.add('d-none');
+    listarUsuarios();
+  });
 
-        userForm.reset();
-        document.getElementById('userId').value = '';
-        loadUsers();
-      });
+  // 4️⃣ Editar usuario
+  window.editarUsuario = (id, nombre, email) => {
+    userIdInput.value = id;
+    nombreInput.value = nombre;
+    emailInput.value = email;
+    cancelEditBtn.classList.remove('d-none');
+  };
 
-      // Editar usuario
-      window.editUser = (id, nombre, email) => {
-        document.getElementById('userId').value = id;
-        document.getElementById('name').value = nombre;
-        document.getElementById('email').value = email;
-      };
+  cancelEditBtn.addEventListener('click', () => {
+    userForm.reset();
+    userIdInput.value = '';
+    cancelEditBtn.classList.add('d-none');
+  });
 
-      // Cancelar edición
-      cancelEdit.addEventListener('click', () => {
-        userForm.reset();
-        document.getElementById('userId').value = '';
-      });
+  // 5️⃣ Eliminar usuario
+  window.eliminarUsuario = async (id) => {
+    if (confirm('¿Eliminar este usuario?')) {
+      const { error } = await supabase.from('usuarios').delete().eq('id', id);
+      if (error) return console.error(error);
+      listarUsuarios();
+    }
+  };
 
-      // Eliminar usuario
-      window.deleteUser = async (id) => {
-        if (confirm('¿Eliminar este usuario?')) {
-          const { error } = await supabase.from('usuarios').delete().eq('id', id);
-          if (error) console.error(error);
-          loadUsers();
-        }
-      };
+  // 6️⃣ Cargar usuarios al iniciar
+  listarUsuarios();
+</script>
 
-      // Cargar usuarios al iniciar
-      loadUsers();
-    });
-  </script>
 </body>
 </html>
