--- a/index.html
+++ b/index.html
@@ -1,141 +1,195 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRUD Supabase en Tiempo Real</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Supabase JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.33.1/dist/supabase.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CRUD Supabase - Usuarios</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <style>
+        body {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            padding: 2rem 0;
+        }
+        .main-container {
+            background: white;
+            border-radius: 20px;
+            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            overflow: hidden;
+        }
+        .form-section {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 2rem;
+            min-height: 600px;
+        }
+        .table-section {
+            padding: 2rem;
+        }
+        .form-control:focus {
+            border-color: #667eea;
+            box-shadow: 0 0 0 0.2rem rgba(102, 126, 234, 0.25);
+        }
+        .btn-custom {
+            background: white;
+            color: #667eea;
+            border: none;
+            padding: 0.75rem 2rem;
+            border-radius: 50px;
+            font-weight: 600;
+            transition: all 0.3s;
+        }
+        .btn-custom:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+        .table-container {
+            max-height: 500px;
+            overflow-y: auto;
+        }
+        .status-badge {
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            border-radius: 50px;
+            font-size: 0.875rem;
+            font-weight: 600;
+        }
+        .status-connected {
+            background: #d4edda;
+            color: #155724;
+        }
+        .status-error {
+            background: #f8d7da;
+            color: #721c24;
+        }
+        .user-count {
+            font-size: 2rem;
+            font-weight: bold;
+            margin-top: 1rem;
+        }
+    </style>
 </head>
-<body class="bg-light">
-
-<div class="container py-5">
-  <h1 class="mb-4">CRUD Usuarios (Tiempo Real)</h1>
-
-  <!-- Formulario -->
-  <div class="card mb-4">
-    <div class="card-body">
-      <form id="userForm">
-        <input type="hidden" id="userId">
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input type="text" id="nombre" class="form-control" required>
+<body>
+    <div class="container">
+        <!-- Header -->
+        <div class="text-center mb-4">
+            <h1 class="text-white fw-bold">
+                <i class="bi bi-database-fill"></i> CRUD con Supabase
+            </h1>
+            <p class="text-white-50">Gestión de Usuarios en Tiempo Real</p>
+            <div id="connectionStatus" class="mt-3"></div>
         </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" id="email" class="form-control" required>
+
+        <!-- Main Container -->
+        <div class="main-container">
+            <div class="row g-0">
+                <!-- Formulario (Izquierda) -->
+                <div class="col-lg-4 form-section">
+                    <h3 class="mb-4">
+                        <i class="bi bi-person-plus-fill"></i> 
+                        <span id="formTitle">Agregar Usuario</span>
+                    </h3>
+                    
+                    <form id="userForm">
+                        <input type="hidden" id="userId">
+                        
+                        <div class="mb-4">
+                            <label for="nombre" class="form-label">
+                                <i class="bi bi-person"></i> Nombre Completo
+                            </label>
+                            <input 
+                                type="text" 
+                                class="form-control form-control-lg" 
+                                id="nombre" 
+                                placeholder="Ej: Juan Pérez"
+                                required
+                            >
+                        </div>
+
+                        <div class="mb-4">
+                            <label for="email" class="form-label">
+                                <i class="bi bi-envelope"></i> Email
+                            </label>
+                            <input 
+                                type="email" 
+                                class="form-control form-control-lg" 
+                                id="email" 
+                                placeholder="ejemplo@correo.com"
+                                required
+                            >
+                        </div>
+
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-custom btn-lg">
+                                <i class="bi bi-save"></i> 
+                                <span id="btnText">Guardar Usuario</span>
+                            </button>
+                            <button 
+                                type="button" 
+                                id="cancelEdit" 
+                                class="btn btn-outline-light d-none"
+                            >
+                                <i class="bi bi-x-circle"></i> Cancelar
+                            </button>
+                        </div>
+                    </form>
+
+                    <div class="mt-5 pt-4 border-top border-light">
+                        <div class="text-center">
+                            <p class="mb-2">Total de Usuarios</p>
+                            <div class="user-count" id="userCount">0</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Tabla (Derecha) -->
+                <div class="col-lg-8 table-section">
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                        <h3 class="mb-0">
+                            <i class="bi bi-table"></i> Lista de Usuarios
+                        </h3>
+                        <button class="btn btn-outline-primary" onclick="listarUsuarios()">
+                            <i class="bi bi-arrow-clockwise"></i> Actualizar
+                        </button>
+                    </div>
+
+                    <div class="table-container">
+                        <table class="table table-hover">
+                            <thead class="table-light sticky-top">
+                                <tr>
+                                    <th width="10%">ID</th>
+                                    <th width="35%">Nombre</th>
+                                    <th width="35%">Email</th>
+                                    <th width="20%" class="text-center">Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody id="usersTable">
+                                <tr>
+                                    <td colspan="4" class="text-center text-muted py-5">
+                                        <i class="bi bi-inbox" style="font-size: 3rem;"></i>
+                                        <p class="mt-3">No hay usuarios registrados</p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <button type="button" id="cancelEdit" class="btn btn-secondary d-none">Cancelar</button>
-      </form>
+
+        <!-- Footer -->
+        <div class="text-center mt-4">
+            <p class="text-white-50">
+                <i class="bi bi-lightning-charge-fill"></i> 
+                Actualización en tiempo real activada
+            </p>
+        </div>
     </div>
-  </div>
 
-  <!-- Tabla -->
-  <table class="table table-bordered bg-white">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Email</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody id="usersTable"></tbody>
-  </table>
-</div>
-
-<script>
-  // 1️⃣ Configurar Supabase
-  const SUPABASE_URL = 'https://otdbuuhddyrjhmgzctsf.supabase.co';
-  const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im90ZGJ1dWhkZHlyamhtZ3pjdHNmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MDMwNzUsImV4cCI6MjA3NjM3OTA3NX0.YXXSWbp5Q2GSM3kbEegzyMLCrAXt2dLtJlkdLDSQawE';
-  const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-  const userForm = document.getElementById('userForm');
-  const usersTable = document.getElementById('usersTable');
-  const userIdInput = document.getElementById('userId');
-  const nombreInput = document.getElementById('nombre');
-  const emailInput = document.getElementById('email');
-  const cancelEditBtn = document.getElementById('cancelEdit');
-
-  // 2️⃣ Función para listar usuarios
-  async function listarUsuarios() {
-    const { data, error } = await supabase.from('usuarios').select('*').order('id');
-    if (error) return console.error(error);
-
-    usersTable.innerHTML = data.map(u => `
-      <tr>
-        <td>${u.id}</td>
-        <td>${u.nombre}</td>
-        <td>${u.email}</td>
-        <td>
-          <button class="btn btn-sm btn-warning" onclick="editarUsuario(${u.id}, '${u.nombre}', '${u.email}')">Editar</button>
-          <button class="btn btn-sm btn-danger" onclick="eliminarUsuario(${u.id})">Eliminar</button>
-        </td>
-      </tr>
-    `).join('');
-  }
-
-  // 3️⃣ Crear o actualizar usuario
-  userForm.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const nombre = nombreInput.value;
-    const email = emailInput.value;
-    const id = userIdInput.value;
-
-    if (id) {
-      const { error } = await supabase.from('usuarios').update({ nombre, email }).eq('id', id);
-      if (error) return console.error(error);
-    } else {
-      const { error } = await supabase.from('usuarios').insert([{ nombre, email }]);
-      if (error) return console.error(error);
-    }
-
-    userForm.reset();
-    userIdInput.value = '';
-    cancelEditBtn.classList.add('d-none');
-  });
-
-  // 4️⃣ Editar usuario
-  window.editarUsuario = (id, nombre, email) => {
-    userIdInput.value = id;
-    nombreInput.value = nombre;
-    emailInput.value = email;
-    cancelEditBtn.classList.remove('d-none');
-  };
-
-  cancelEditBtn.addEventListener('click', () => {
-    userForm.reset();
-    userIdInput.value = '';
-    cancelEditBtn.classList.add('d-none');
-  });
-
-  // 5️⃣ Eliminar usuario
-  window.eliminarUsuario = async (id) => {
-    if (confirm('¿Eliminar este usuario?')) {
-      const { error } = await supabase.from('usuarios').delete().eq('id', id);
-      if (error) return console.error(error);
-    }
-  };
-
-  // 6️⃣ Escuchar cambios en tiempo real
-  supabase
-    .channel('realtime-usuarios')
-    .on(
-      'postgres_changes',
-      { event: '*', schema: 'public', table: 'usuarios' },
-      payload => {
-        console.log('Cambio detectado:', payload);
-        listarUsuarios();
-      }
-    )
-    .subscribe();
-
-  // 7️⃣ Cargar usuarios al iniciar
-  listarUsuarios();
-</script>
-
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="main.js"></script>
 </body>
 </html>
